--- a/Designer/Interface/WebApi/Project.xaml
+++ b/Designer/Interface/WebApi/Project.xaml
@@ -55,7 +55,8 @@
 
 		<CheckBox Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Margin="5" Content="Enable EntityFramework 6" IsChecked="{Binding Path=Settings.EnableEntityFramework}" />
 		<pc:TextBox Text="{Binding Path=Settings.EnitityDatabaseType, UpdateSourceTrigger=PropertyChanged}" x:Name="EntityName" Grid.Row="2" Grid.Column="1" Margin="5,5,5,5" IsEnabled="{Binding Path=Settings.EnableEntityFramework}" LabelText="Entity Database Context Type" />
-	</Grid>
+        <ToggleButton Content="Project is Self-Hosted" IsChecked="{Binding Path=Settings.IsSelfHosted}" Margin="5" VerticalAlignment="Center" Grid.Column="2" Grid.Row="2" />
+    </Grid>
 	<Grid Grid.Column="0" Grid.Row="4">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
