--- a/Designer/Interface/Wcf/Data/Data.xaml
+++ b/Designer/Interface/Wcf/Data/Data.xaml
@@ -77,7 +77,7 @@
 						<RowDefinition Height="*" />
 					</Grid.RowDefinitions>
 					<Label Grid.Row="0" Margin="0,5" Padding="6,2,0,2" Content="Add Member:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
-					<Data:TypeSelector Project="{Binding OpenType}" x:Name="AddMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="375" ValidationChanged="AddMemberType_ValidationChanged" />
+                    <Data:TypeSelector Project="{Binding OpenType}" x:Name="AddMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="375" Selected="AddMemberType_Selected" />
 					<pc:TextBox x:Name="AddMemberName" LabelText="Name" Grid.Row="0" Margin="490,5,105,5" Validate="AddMemberName_Validate" TextChanged="AddMemberName_TextChanged" KeyUp="AddMemberName_KeyUp" />
 					<Button x:Name="AddMember" Grid.Row="0" Margin="5" Content="Add" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddMember_Click" />
 					<Grid Grid.Row="1" Margin="0,5,0,0">
