--- a/Designer/Interface/WebApi/Service/Service.xaml
+++ b/Designer/Interface/WebApi/Service/Service.xaml
@@ -19,29 +19,29 @@
 					<Rest:CookieContainerModeConverter x:Key="CookieContainerModeConverter" />
 					<Rest:CredentialsModeConverter x:Key="CredentialsModeConverter" />
 					<Rest:DecompressionMethodsConverter x:Key="DecompressionMethodsConverter" />
-                    
-                    <Rest:XmlConformanceLevelConverter x:Key="XmlConformanceLevelConverter" />
-                    <Rest:XmlNamespaceHandlingConverter x:Key="XmlNamespaceHandlingConverter" />
-                    <Rest:XmlNewLineHandlingConverter x:Key="XmlNewLineHandlingConverter" />
-                    
-                    <Rest:JsonConstructorHandlingConverter x:Key="JsonConstructorHandlingConverter" />
-                    <Rest:JsonDateFormatHandlingConverter x:Key="JsonDateFormatHandlingConverter" />
-                    <Rest:JsonDateParseHandlingConverter x:Key="JsonDateParseHandlingConverter" />
-                    <Rest:JsonDateTimeZoneHandlingConverter x:Key="JsonDateTimeZoneHandlingConverter" />
-                    <Rest:JsonDefaultValueHandlingConverter x:Key="JsonDefaultValueHandlingConverter" />
-                    <Rest:JsonFloatFormatHandlingConverter x:Key="JsonFloatFormatHandlingConverter" />
-                    <Rest:JsonFloatParseHandlingConverter x:Key="JsonFloatParseHandlingConverter" />
-                    <Rest:JsonFormatterAssemblyStyleConverter x:Key="JsonFormatterAssemblyStyleConverter" />
-                    <Rest:JsonFormattingConverter x:Key="JsonFormattingConverter" />
-                    <Rest:JsonMemberSerializationConverter x:Key="JsonMemberSerializationConverter" />
-                    <Rest:JsonMetadataPropertyHandlingConverter x:Key="JsonMetadataPropertyHandlingConverter" />
-                    <Rest:JsonMissingMemberHandlingConverter x:Key="JsonMissingMemberHandlingConverter" />
-                    <Rest:JsonNullValueHandlingConverter x:Key="JsonNullValueHandlingConverter" />
-                    <Rest:JsonObjectCreationHandlingConverter x:Key="JsonObjectCreationHandlingConverter" />
-                    <Rest:JsonPreserveReferencesHandlingConverter x:Key="JsonPreserveReferencesHandlingConverter" />
-                    <Rest:JsonReferenceLoopHandlingConverter x:Key="JsonReferenceLoopHandlingConverter" />
-                    <Rest:JsonStringEscapeHandlingConverter x:Key="JsonStringEscapeHandlingConverter" />
-                    <Rest:JsonTypeNameHandlingConverter x:Key="JsonTypeNameHandlingConverter" />
+
+					<Rest:XmlConformanceLevelConverter x:Key="XmlConformanceLevelConverter" />
+					<Rest:XmlNamespaceHandlingConverter x:Key="XmlNamespaceHandlingConverter" />
+					<Rest:XmlNewLineHandlingConverter x:Key="XmlNewLineHandlingConverter" />
+
+					<Rest:JsonConstructorHandlingConverter x:Key="JsonConstructorHandlingConverter" />
+					<Rest:JsonDateFormatHandlingConverter x:Key="JsonDateFormatHandlingConverter" />
+					<Rest:JsonDateParseHandlingConverter x:Key="JsonDateParseHandlingConverter" />
+					<Rest:JsonDateTimeZoneHandlingConverter x:Key="JsonDateTimeZoneHandlingConverter" />
+					<Rest:JsonDefaultValueHandlingConverter x:Key="JsonDefaultValueHandlingConverter" />
+					<Rest:JsonFloatFormatHandlingConverter x:Key="JsonFloatFormatHandlingConverter" />
+					<Rest:JsonFloatParseHandlingConverter x:Key="JsonFloatParseHandlingConverter" />
+					<Rest:JsonFormatterAssemblyStyleConverter x:Key="JsonFormatterAssemblyStyleConverter" />
+					<Rest:JsonFormattingConverter x:Key="JsonFormattingConverter" />
+					<Rest:JsonMemberSerializationConverter x:Key="JsonMemberSerializationConverter" />
+					<Rest:JsonMetadataPropertyHandlingConverter x:Key="JsonMetadataPropertyHandlingConverter" />
+					<Rest:JsonMissingMemberHandlingConverter x:Key="JsonMissingMemberHandlingConverter" />
+					<Rest:JsonNullValueHandlingConverter x:Key="JsonNullValueHandlingConverter" />
+					<Rest:JsonObjectCreationHandlingConverter x:Key="JsonObjectCreationHandlingConverter" />
+					<Rest:JsonPreserveReferencesHandlingConverter x:Key="JsonPreserveReferencesHandlingConverter" />
+					<Rest:JsonReferenceLoopHandlingConverter x:Key="JsonReferenceLoopHandlingConverter" />
+					<Rest:JsonStringEscapeHandlingConverter x:Key="JsonStringEscapeHandlingConverter" />
+					<Rest:JsonTypeNameHandlingConverter x:Key="JsonTypeNameHandlingConverter" />
 
 					<DataTemplate x:Key="{x:Type Projects:WebApiMethod}" DataType="{x:Type Projects:WebApiMethod}">
 						<Border Background="#01FFFFFF">
@@ -129,7 +129,7 @@
 					<RowDefinition Height="*" />
 				</Grid.RowDefinitions>
 				<Label Grid.Row="0" Grid.Column="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Method:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="Auto" />
-				<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Grid.Column="1" Margin="5" ValidationChanged="AddServiceMemberType_ValidationChanged" />
+				<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Grid.Column="1" Margin="5" Selected="AddServiceMemberType_Selected" />
 				<pc:TextBox x:Name="AddServiceMemberName" LabelText="Name" Grid.Row="0" Grid.Column="2" Margin="5" Validate="AddServiceMemberName_Validate" TextChanged="AddServiceMemberName_TextChanged" KeyUp="AddServiceMemberName_KeyUp" />
 				<Button x:Name="AddServiceMethod" Grid.Row="0" Grid.Column="3" Margin="5" Content="Add" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceMethod_Click" />
 				<Grid Grid.Row="1" Margin="0,5,0,0" Grid.ColumnSpan="6">
@@ -260,13 +260,13 @@
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="*" />
 				</Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <ToggleButton Content="JSON/BSON Formatting" Margin="10" Grid.Row="0" Grid.Column="0" />
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+				</Grid.ColumnDefinitions>
+				<ToggleButton Content="JSON/BSON Formatting" Margin="10" Grid.Row="0" Grid.Column="0" />
 
-                <ToggleButton Content="XML Formatting" Margin="10" Grid.Row="1" Grid.Column="0" />
+				<ToggleButton Content="XML Formatting" Margin="10" Grid.Row="1" Grid.Column="0" />
 			</Grid>
 		</TabItem>
 		<TabItem Padding="10,5">
